--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,21 +3,31 @@ plugins {
 }
 
 android {
-    namespace 'com.yellowmango.bindu'
-    compileSdk 34
+    namespace 'com.gajendra.bindu'
+    compileSdk 35
 
     defaultConfig {
-        applicationId "com.yellowmango.bindu"
+        applicationId "com.gajendra.bindu"
         minSdk 21
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        targetSdk 35
+        versionCode 10
+        versionName "2.3"
+    }
+
+    signingConfigs {
+        release {
+            storeFile file('../androidbindu.keystore')
+            storePassword 'androidbindu123'
+            keyAlias 'HardhikHansini'
+            keyPassword 'androidbindu123'
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
